--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 ariadne = "0.3.0"
 chumsky = "1.0.0-alpha.6"
 clap = { version = "4.4.11", features = ["derive"] }
+rustc-hash = "1.1.0"
