--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ ariadne = "0.4.0"
 chumsky = "1.0.0-alpha.6"
 clap = { version = "4.4.14", features = ["derive"] }
 rustc-hash = "1.1.0"
+rustyline = "13.0.0"
