--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 [dependencies]
 ariadne = "0.4.0"
 chumsky = "1.0.0-alpha.6"
-clap = { version = "4.4.16", features = ["derive"] }
+clap = { version = "4.4.18", features = ["derive"] }
+levelfile = { git = "https://github.com/skycloudd/levelfile/", version = "0.1.0" }
 rustc-hash = "1.1.0"
