--- a/.github/workflows/rust-clippy.yml
+++ b/.github/workflows/rust-clippy.yml
@@ -13,7 +13,6 @@ on:
     push:
         branches: ["main"]
     pull_request:
-        # The branches below must be a subset of the branches above
         branches: ["main"]
     schedule:
         - cron: "16 7 * * 4"
@@ -25,7 +24,7 @@ jobs:
         permissions:
             contents: read
             security-events: write
-            actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+            actions: read
         steps:
             - name: Checkout code
               uses: actions/checkout@v2
