--- a/.github/workflows/mdbook-deploy.yml
+++ b/.github/workflows/mdbook-deploy.yml
@@ -19,8 +19,8 @@ jobs:
               with:
                   toolchain: stable
             - run: (test -x $HOME/.cargo/bin/mdbook || cargo install --vers "^0.4" mdbook)
-            - run: mdbook build book && mdbook test book
+            - run: mdbook build book -d output && mdbook test book
             - uses: JamesIves/github-pages-deploy-action@4.1.7
               with:
                   branch: gh-pages
-                  folder: book
+                  folder: output
