--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ ariadne = "0.4.0"
 binread = "2.2.0"
 chumsky = "1.0.0-alpha.6"
 clap = { version = "4.4.18", features = ["derive"] }
+flate2 = "1.0.28"
 levelfile = { git = "https://github.com/skycloudd/levelfile/", version = "0.2.1" }
 rustc-hash = "1.1.0"
