--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,5 @@ ariadne = "0.4.0"
 chumsky = "1.0.0-alpha.6"
 clap = { version = "4.5.0", features = ["derive"] }
 flate2 = "1.0.28"
-levelfile = { git = "https://github.com/skycloudd/levelfile/", version = "0.3.1" }
+exolvl = { git = "https://github.com/skycloudd/exolvl/", version = "0.4.0" }
 rustc-hash = "1.1.0"
