--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,11 @@ clap = { version = "4.5.0", features = ["derive"] }
 flate2 = "1.0.28"
 exolvl = { git = "https://github.com/skycloudd/exolvl/", version = "0.4.0" }
 rustc-hash = "1.1.0"
+serde = { version = "1.0.196", features = ["derive"] }
+
+[dev-dependencies]
+insta = { version = "1.34.0", features = ["yaml"] }
+
+[profile.dev.package]
+insta.opt-level = 3
+similar.opt-level = 3
