--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ exolvl = { git = "https://github.com/skycloudd/exolvl/", version = "0.4.0" }
 rustc-hash = "1.1.0"
 
 [dev-dependencies]
-insta = { version = "1.34.0", features = ["yaml"] }
+insta = "1.34.0"
 
 [profile.dev.package]
 insta.opt-level = 3
