--- a/book/book.toml
+++ b/book/book.toml
@@ -3,4 +3,4 @@ authors = ["skycloudd"]
 language = "en"
 multilingual = false
 src = "src"
-title = "Nova programming language"
+title = "Nova Programming Language"
