--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,7 @@ edition = "2021"
 [dependencies]
 ariadne = "0.4.0"
 chumsky = "1.0.0-alpha.6"
-clap = { version = "4.5.1", features = ["derive"] }
-exolvl = "0.6.0"
-flate2 = "1.0.28"
-heck = { version = "0.4.1", features = ["unicode"] }
+clap = { version = "4.5.3", features = ["derive"] }
+heck = "0.5.0"
 rustc-hash = "1.1.0"
 snake_case = "0.3.1"
