--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ariadne = "0.4.0"
+# ariadne = "0.4.0"
 chumsky = "1.0.0-alpha.6"
 clap = { version = "4.5.3", features = ["derive"] }
+codespan-reporting = "0.11.1"
 heck = "0.5.0"
 rustc-hash = "1.1.0"
 snake_case = "0.3.1"
