--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-# ariadne = "0.4.0"
+camino = "1.1.6"
 chumsky = "1.0.0-alpha.6"
 clap = { version = "4.5.3", features = ["derive"] }
 codespan-reporting = "0.11.1"
