--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,9 @@ chumsky = "1.0.0-alpha.6"
 clap = { version = "4.5.3", features = ["derive"] }
 codespan-reporting = "0.11.1"
 heck = "0.5.0"
+log = "0.4.21"
 rustc-hash = "1.1.0"
+simple_logger = { version = "4.3.3", default-features = false, features = [
+    "colors",
+] }
 snake_case = "0.3.1"
