--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,10 @@ camino = "1.1.6"
 chumsky = { version = "1.0.0-alpha.6", features = ["label"] }
 clap = { version = "4.5.3", features = ["derive"] }
 codespan-reporting = "0.11.1"
+cranelift = "0.106.0"
+cranelift-module = "0.106.0"
+cranelift-native = "0.106.0"
+cranelift-object = "0.106.0"
 heck = "0.5.0"
 levenshtein = "1.0.5"
 log = "0.4.21"
