--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 camino = "1.1.6"
-chumsky = { version = "1.0.0-alpha.6", features = ["label"] }
+chumsky = "1.0.0-alpha.6"
 clap = { version = "4.5.4", features = ["derive"] }
 codespan-reporting = "0.11.1"
 cranelift = "0.106.0"
